--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "precommit": "npm test"
+    "precommit": "npm test",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.js' --write"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
+      "pre-commit":"npm run prettier-format && npm run lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
