--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit":"npm run prettier-format && npm run lint",
+      "pre-commit": "npm run prettier-format && npm run lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-base": "^14.2.0",
