--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
